Fixed line graph alignment, spacing and dates issues

--- a/src/frontend/src/components/Analytics.css
+++ b/src/frontend/src/components/Analytics.css
@@ -37,5 +37,8 @@
 }
 
 .month-line-graph-header {
-  display:inline-flex;
+  display:flex;
+  justify-content: space-between;
+  align-Items: "center";
+  margin-bottom: "10px";
 }
